--- a/src/views/HomeView/HomeView.scss
+++ b/src/views/HomeView/HomeView.scss
@@ -7,12 +7,34 @@
     gap: 10vh;
 }
 
+.search-input {
+    height: 5vh;
+    width: 20vw;
+}
+
 #pokemons-home-container {
-    border: 1px solid black;
-    width: 45vw;
+    // border: 1px solid black;
+    width: 60vw;
     display: flex;
     flex-wrap: wrap;
     gap: 3vw;
     justify-content: center;
     align-items: center;
+}
+
+#home-container-dark {
+    height: 200vh;
+    width: 100vw;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 10vh;
+    background-color: rgba(0,0,0,.7);
+    #pokemons-home-container {
+        border: none;
+    }
+    .pokemon-container, h1, input {
+        opacity: 0.05;
+        pointer-events: none;
+    }
 }
