--- a/src/components/PokemonComponent/PokemonComponent.scss
+++ b/src/components/PokemonComponent/PokemonComponent.scss
@@ -12,7 +12,7 @@
 
 .pokemon-container:hover {
     cursor: pointer;
-    background-color: $backgroundColorBody;
+    background-color: $backgroundColorPokemon;
 }
 
 @keyframes slidein {
