--- a/src/assets/scss/_navbar.scss
+++ b/src/assets/scss/_navbar.scss
@@ -1,20 +1,23 @@
 @import "./colors";
 
 @mixin navbar {
-    @media (min-width: 768px) {
-        width: 100vw;
-        height: 10vh;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        background-color: $backgroundColorNavbar;
-        h1 {
-            font-size: 5vh;
-            text-shadow: $textShadow;
-        };
-        p {
-            text-shadow: $textShadow;
-        };
-    }
-}
+    width: 100vw;
+    height: 10vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: $backgroundColorNavbar;
 
+    h1 {
+        font-size: 5vh;
+        text-shadow: $textShadow;
+    }
+
+    ;
+
+    p {
+        text-shadow: $textShadow;
+    }
+
+    ;
+}
