--- a/src/assets/scss/_colors.scss
+++ b/src/assets/scss/_colors.scss
@@ -2,6 +2,7 @@ $color1: #001082;
 $color2: #0044CC;
 $color3: #0055FF;
 $color4: #2693FF;
+$backgroundColorBody: #ffffff;
 $backgroundColorPokemon: #bfbfbf;
 $backgroundColorNavbar: #dbd3d3;
 $textShadow: 2px 2px 4px rgb(129, 168, 165);
