--- a/src/views/HomeView/HomeView.scss
+++ b/src/views/HomeView/HomeView.scss
@@ -7,6 +7,7 @@
     flex-direction: column;
     align-items: center;
     gap: 5vh;
+    background-color: $backgroundColorBody;
 }
 
 .search-input {
