refatorando cor da letra para dispositivos menores que 800 pixels de largura

--- a/src/views/HomeView/HomeView.scss
+++ b/src/views/HomeView/HomeView.scss
@@ -42,6 +42,9 @@
 }
 
 @media (max-width: 800px) {
+    * {
+        color: black;
+    }
     .search-input {
         width: 50vw;
         height: 9vh;
