--- a/src/views/HomeView/HomeView.scss
+++ b/src/views/HomeView/HomeView.scss
@@ -45,6 +45,9 @@
     * {
         color: black;
     }
+    #pokemons-home-container {
+        width: 100vw;
+    }
     .search-input {
         width: 50vw;
         height: 9vh;
