--- a/src/components/PokemonComponent/PokemonComponent.scss
+++ b/src/components/PokemonComponent/PokemonComponent.scss
@@ -8,6 +8,7 @@
     align-items: center;
     justify-content: center;
     width: 12vw;
+    background-color: gray;
 }
 
 .pokemon-container:hover {
